Fix refactoring slips

--- a/globingular/ui/src/main/resources/html/world.html
+++ b/globingular/ui/src/main/resources/html/world.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Map</title>
-    <link rel="stylesheet" href="../css/country.css"/>
+    <link rel="stylesheet" href="../html-css/country.css"/>
 </head>
 <body>
 <svg version="1.1"
